2012-02-22  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* subconnector.cc (EventInputSubconnectorGlobal::receive)
	(EventInputSubconnectorLocal::receive): Check that message
	size > 0 before checking for FLUSH_MARK.

2011-11-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (libmusic_la_LDFLAGS): Added libmpidep.la in order
	to support predictRank.

	* music/predict_rank.hh, predict_rank.cc: New files.

2011-01-31  Mikael Djurfeldt  <mdj@djurfeldt.com>

	* Makefile.am (libmusic_c_la_DEPENDENCIES): Added in order to
	support parallel builds.

2011-01-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* subconnector.cc (ContInputSubconnector::receive): Update receive
	buffer pointer for subsequent receives when large packages have
	been split.

	* BIFO.cc (BIFO::insertBlock): Fixes to logic when buffer has
	wrapped around.

2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.7

	* synchronizer.cc (Synchronizer::nextCommunication): Revert
	buggy handling of tight loops in change of 2009-10-23.

	* subconnector.cc
	(MessageOutputSubconnector::MessageOutputSubconnector): Bugfix:
	Initialize synchronizer pointer properly.

2009-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.6

	* ioutils.c, parse.cc: Added #include <cstdio>.

2009-10-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.5

2009-10-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* synchronizer.cc (Synchronizer::nextCommunication): Handle
	tight loops (maxBuffered == 0) of spike events.

	* temporal.cc (TemporalNegotiator::combineParameters): Correctly
	take MAX_BUFFERED_NO_VALUE arguments into consideration.

	* music/subconnector.hh, connector.cc, runtime.cc,
	subconnector.cc: Use COMM_WORLD ranks for the pair-wise
	communication schedule in Runtime::buildSchedule.

	* music/port.hh, port.cc (EventOutputPort::EventOutputPort,
	EventInputPort::EventInputPort): Moved from header file to
	port.cc.
